Fixed spacing issue between Calendar buttons

--- a/app/calendar/calendar.css
+++ b/app/calendar/calendar.css
@@ -182,3 +182,25 @@
   margin: 5px 0;
   color: #ccc;
 }
+
+/* Fix the spacing of the calendar arrows */
+.react-calendar__navigation button {
+  min-width: 44px;
+  background: none;
+  font-size: 1.2rem;
+  margin: 0 5px;
+  border-radius: 8px;
+}
+
+.react-calendar__navigation__label {
+  font-weight: bold;
+  font-size: 1.1rem;
+  flex-grow: 0 !important;
+  margin: 0 10px;
+}
+
+.react-calendar__navigation button:enabled:hover,
+.react-calendar__navigation button:enabled:focus {
+  background-color: #333;
+  color: #d946ef;
+}
